--- a/Phan.HW.A2.ipynb
+++ b/Phan.HW.A2.ipynb
@@ -80,15 +80,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.272 409 564 0.0142657208499\n"
+      "0.272 409 564 0.0322832705591\n"
      ]
     }
    ],
    "source": [
     "#calculate standard dev\n",
-    "sp_stdev= lambda p, n: np.sqrt(p*(1-p)/n)\n",
+    "sp_stdev= lambda p, n: np.sqrt(p*(1-p)/n[0]+p*(1-p)/n[1])\n",
     "\n",
-    "sp_stdev_3y = sp_stdev(P_ctr,n_ctr+n_pro)\n",
+    "sp_stdev_3y = sp_stdev((P_ctr+P_pro),[n_ctr,n_pro])\n",
     "print P_ctr, n_ctr, n_pro, sp_stdev_3y"
    ]
   },
@@ -103,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.700981051377\n"
+      "0.309757959054\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "is the p value 0.23 smaller than the critical value 0.05? \n",
+      "is the p value 0.36 smaller than the critical value 0.05? \n",
       "NO!\n",
       "the Null hypothesis is not rejected\n"
      ]
@@ -134,7 +134,7 @@
    "source": [
     "#p-value for employment after 3 years\n",
     "\n",
-    "p_3y=1-0.7734\n",
+    "p_3y=1-0.6368\n",
     "\n",
     "def report_result(p,a):\n",
     "    print 'is the p value {0:.2f} smaller than the critical value {1:.2f}? '.format(p,a)\n",
